fix about me section being uncentered on mobile resolution

--- a/src/components/AboutMe/AboutMe.module.scss
+++ b/src/components/AboutMe/AboutMe.module.scss
@@ -40,5 +40,6 @@
     @include maxWidthMediaQuery(1024px) {
         flex-direction: column;
         align-items: center;
+        justify-content: unset;
     }
 }
